...
    }
  }

  return (
    <SafeAreaView style={styles.containerNoPadding}>
      <KeyboardAwareScrollView style={styles.container}>
        <ModalHeading name="Invite a member" />

        <Text style={styles.label}>Search user</Text>
        <TextInput
          value={search}
          onChangeText={setSearch}
          placeholder='Name'
...
        <Text style={styles.label}>Invited users</Text>
        <FlatList
          data={invitedUsers}
          keyExtractor={item => item.id.toString()}
          scrollEnabled={false}
          style={{ marginBottom: 8, ...(invitedUsers.length > 0 && { ...styles.borderColor, borderTopWidth: 1 }) }}
          ListEmptyComponent={<Text style={styles.text}>No pending invites</Text>}
          renderItem={({ item }) => (
            <TouchableOpacity
              style={styles.listItemSmall}
              onPress={() => cancelInvite(item)}
            >
              <IconSymbol size={20} name="xmark" color={isDark ? Colors.dark.tint : Colors.light.tint} />
...
