...
        <Image
          source={images.logo}
          style={{ width: 310, height: 80 }}
        />
      </View>

      <Text style={styles.label}>Email</Text>
      <TextInput
        value={email}
        onChangeText={setEmail}
        autoCapitalize="none"
        keyboardType="email-address"
        placeholder='Email'
        placeholderTextColor={styles.placeholderText.color}
        returnKeyType="next"
        onSubmitEditing={() => passwordInputRef.current?.focus()} 
        style={styles.input}
      />

      <Text style={styles.label}>Password</Text>
      <TextInput
        value={password}
        ref={passwordInputRef}
        onChangeText={setPassword}
        autoCapitalize="none"
        secureTextEntry
...
        <>
          <TouchableOpacity
            onPress={handleLogin}
            style={styles.buttonHighlight}
          >
            <Text style={styles.buttonHighlightText}>
              Log in
            </Text>
          </TouchableOpacity>

          <TouchableOpacity
            onPress={() => router.push('/(auth)/signUp')}
            style={styles.button}
          >
            <Text style={styles.buttonText}>
              Sign up
            </Text>
          </TouchableOpacity>
        </>
      )}

    </KeyboardAwareScrollView>
...
