...
import { router } from 'expo-router';

const members: User[] = [
  {
    id: 0,
    name: "Barack Obama",
    email: "barack@obama.com",
  },
  {
    id: 1,
    name: "Joe Biden",
    email: "joe@biden.com",
  },
...
