appId: host.exp.exponent   # Expo Go package name
---
- assertVisible: 'Log in'
- assertVisible: 'Sign up'
- assertVisible: 'Email'
- assertVisible: 'Password'

- tapOn: 
    text: 'Email'
    index: 1
- inputText: barack@obama.com

- tapOn: 
    text: 'Password'
    index: 1
- inputText: TheGoat123

- tapOn:
    point: "50%,36%"

- tapOn: 'Log in'

- tapOn: 'Groups'

- tapOn: 'Presidents of the USA'

- tapOn: 'Invite a member'

- assertVisible: 'Invite a member'
- assertVisible: 'Name'
- assertVisible: 'invited users'
- assertVisible: 'No pending invites'

- tapOn: 'name'

- inputText: "John Pork"

- tapOn:
    text: "John Pork"
    index: 1
- tapOn:
    text: "John Pork"
    index: 1

- tapOn: 'name'

- inputText: "Jane Doe"

- tapOn:
    text: "Jane Doe"
    index: 1
- tapOn:
    text: "Jane Doe"
    index: 1

- tapOn: "Jane Doe"

- swipe:  
    start: 5%, 50% # From (90% of width, 50% of height)
    end: 15%, 50% # To (10% of width, 50% of height)

- tapOn: 'Account'

- tapOn:
    point: "6%,5%"

- tapOn: 'Logout'

- tapOn: 'Sign out'