appId: host.exp.exponent   # Expo Go package name
---
- assertVisible: 'Log in'
- assertVisible: 'Sign up'
- assertVisible: 'Email'
- assertVisible: 'Password'

- tapOn: 'Sign up'

- assertVisible: 'Name'
- assertVisible: 'Email'
- assertVisible: 'Password'
- assertVisible: 'Confirm password'
- assertVisible: 'Sign up'
- assertVisible: 'Log in'


- tapOn:
    text: "Name"
    index: 1
- inputText: "Donald Trump"

- tapOn: 
    text: 'Email'
    index: 1
- inputText: Donald@Trump.com

- tapOn: 
    text: 'Password'
    index: 1
- inputText: Orange2024

- tapOn: 
    text: 'Confirm password'
    index: 1
- inputText: Orange2024

- tapOn: 'Sign up'

- assertVisible: 'Home'
- assertVisible: 'groups'
- assertVisible: 'Account'

- tapOn: 'Account'

- assertVisible: 'Hello Donald Trump'
- assertVisible: 'Donald@Trump.com'

- tapOn:
    point: "6%,5%"

- assertVisible: 'Logout'
- tapOn: 'Logout'

- assertVisible: 'Do you wish to log out?'
- assertVisible: 'Sign out'

- tapOn: 'Sign out'

- assertVisible: 'Log in'
- assertVisible: 'Sign up'
- assertVisible: 'Email'
- assertVisible: 'Password'